# datathon-analytics-club

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  project_env.py  pyproject.toml
app/: config.py  main.py
app/api/routes/: listings.py
app/core/: geocoding.py  hard_filters.py
app/harness/: csv_import.py  search_service.py
app/models/: schemas.py
app/participant/: description_analysis.py  description_artifacts.py  description_extractor.py  explanations.py  geolocation_extractor.py  hard_fact_extraction.py  listing_row_parser.py  llm_client.py  ranking.py  soft_filtering.py
app/participant/constraint_extractor/: __init__.py  extractor.py  prompts.py
apps_sdk/server/: main.py
apps_sdk/web/: Caddyfile  Dockerfile  vite.config.ts
apps_sdk/web/src/: App.tsx  styles.css
apps_sdk/web/src/components/: FilterChips.tsx  ListingsMap.tsx  RankedList.tsx
artifacts/: listing_description_index.csv  soft_title_embeddings.npy  soft_title_keys.json
raw_data/: README.md
scripts/: precompute_embeddings.py  start_public_demo.sh  stop_public_demo.sh
tests/: README.md  test_api.py  test_bootstrap.py  test_geocoding.py  test_llm_client.py  test_pipeline.py  test_s3.py  test_soft_filters.py
